tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vpmovmskb_r64_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:269:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %6) #22
            ^
0.01user 0.04system 0:00.12elapsed 48%CPU (0avgtext+0avgdata 27204maxresident)k
0inputs+16outputs (0major+3265minor)pagefaults 0swaps
